--- a/src/poc/attacker.html
+++ b/src/poc/attacker.html
@@ -23,7 +23,7 @@
     }
 
     async function run(url) {
-      get_diff(url);
+      get_diff(url + 'exists');
       get_diff(url + 'does_not_exist');
     }
     
