--- a/src/poc/attacker.html
+++ b/src/poc/attacker.html
@@ -24,7 +24,7 @@
     }
     
     onload = () => {
-      get('https://zhjw.cic.tsinghua.edu.cn/jxmh_out.do?m=bks_jxrl_all&p_start_date=20220801&p_end_date=20221001&sjtzb=true&jsoncallback=no_such_method2&_csrf=762bfdbe-e4f6-43dd-bf64-70ff6666738a&_=1662195893966');
+      get('https://learn.tsinghua.edu.cn/f/wlxt/kc/wj_wjb/student/beforePlay?sfgk=0&wjid=2006990066_KJ_165772165763066d4475013-ae14-47a2-b508-8b0569e8d532&mk=mk_kcwj&pageType=all&browser=-1');
     }
   </script>
 </head>
