--- a/src/poc/attacker.html
+++ b/src/poc/attacker.html
@@ -24,7 +24,7 @@
     }
     
     onload = () => {
-      get('https://www.google.com/robots.txt');
+      get('https://www.baidu.com/robots.txt');
       //get('https://learn.tsinghua.edu.cn/f/wlxt/gkk/v_wlkc_jsjbxxb_wjb/all/courseinfo/2022-2023-1144813095');
     }
   </script>
