--- a/src/poc/attacker.html
+++ b/src/poc/attacker.html
@@ -3,7 +3,7 @@
   <script>
     
     async function get(url) {
-      let element = document.createElement('img');
+      let element = document.createElement('source');
       element.src = url;
 
       return new Promise((resolve) => {
