--- a/src/poc-original/sizeleak.html
+++ b/src/poc-original/sizeleak.html
@@ -54,7 +54,7 @@
 			}
 			
 			onload = () => {
-				sizeLoop("https://www.google.com/robots.txt", 7240);
+				sizeLoop("https://www.baidu.com/robots.txt", 2900);
 			}
 	</script>
 </head>
