--- a/src/poc-changed/sizeleak.html
+++ b/src/poc-changed/sizeleak.html
@@ -44,7 +44,7 @@
 
 			
 			onload = () => {
-				sizeLoop("https://www.baidu.com/robots.txt", 2970);
+				sizeCheck("https://www.baidu.com/robots.txt", 2970);
 			}
 	</script>
 </head>
