--- a/src/poc-changed/sizeleak.html
+++ b/src/poc-changed/sizeleak.html
@@ -28,6 +28,7 @@
 	
 			onload = () => {
 				singleSizeCheck("https://www.baidu.com/robots.txt", 10);
+        singleSizeCheck("https://www.baidu.com/robots.txt", 2976);
         singleSizeCheck("https://www.baidu.com/robots.txt", 2977);
 			}
 	</script>
