--- a/src/poc-original/sizeleak.html
+++ b/src/poc-original/sizeleak.html
@@ -14,7 +14,7 @@
 			singleSizeCheck =  async (url, size) => {
 				let start   = performance.getEntries().length;
 				let sound   = document.createElement("audio");
-				sound.src = `${url}?size=${size}&${Math.random()}`;
+				sound.src = `${url}?size=${size}`;
 				return new Promise((resolve) => {
 					sound.onerror = () => {
 						let end = performance.getEntries().length;
