--- a/src/poc2/attacker.html
+++ b/src/poc2/attacker.html
@@ -40,12 +40,12 @@
       var base = 'https://target.georgetian.com/';
       var resources = [
         //'text.txt',
-        'audio.mp3',
+        //'audio.mp3',
         //'frame',
-        'iframe',
+        //'iframe',
         'img.png',
         //'script.js',
-        'video.mp4',
+        //'video.mp4',
       ];
       var sizes = [
         2,
