--- a/src/poc2/attacker.html
+++ b/src/poc2/attacker.html
@@ -45,7 +45,7 @@
         //'iframe',
         'img.png',
         //'script.js',
-        'video.mp4',
+        //'video.mp4',
       ];
       var sizes = [
         2,
