--- a/src/poc2/attacker.html
+++ b/src/poc2/attacker.html
@@ -55,7 +55,7 @@
 
 
       function run() {
-
+        fetch('/reset');
         let elements = [];
         for (const resource of resources) {
           elements.push(resource.split('.')[0]);
