--- a/src/poc2/attacker.html
+++ b/src/poc2/attacker.html
@@ -76,6 +76,7 @@
 
       if ('serviceWorker' in navigator) {
         addEventListener('load', async () => {
+          await fetch('https://attacker.georgetian.com/reset');
           await navigator.serviceWorker.register('serviceworker.js');
           run();
         });
