--- a/src/poc-original/sizeleak.html
+++ b/src/poc-original/sizeleak.html
@@ -5,7 +5,7 @@
 			if ("serviceWorker" in navigator) {
 				addEventListener("load", async () => {
 					performance.setResourceTimingBufferSize(1337);
-					const registration = await navigator.serviceWorker.register("serviceworker.js");
+					const registration = await navigator.serviceWorker.register("static/serviceworker.js");
 					if (registration.installing)
 						location.reload();
 				});
