--- a/src/poc2/attacker.html
+++ b/src/poc2/attacker.html
@@ -66,7 +66,7 @@
         fetch('/reset');
 
         let i = 1;
-
+        console.log(tags);
         for (let tag of tags) {
           for (const size of sizes) {
             setTimeout(get, i * delay, tag, tags[tag], base, size);
