--- a/src/poc2/attacker.html
+++ b/src/poc2/attacker.html
@@ -12,6 +12,7 @@
         let start = performance.getEntries().length;
         let e = document.createElement(element);
         e[attribute] = `${url}?size=${size}&id=${performance.now()}&tag=${element}`;
+        document.body.append(e);
 
         e.onload = () => {
           show(element, url, size, 'onload', performance.getEntries().length - start);
