--- a/src/poc2/attacker.html
+++ b/src/poc2/attacker.html
@@ -38,7 +38,7 @@
 
       var tags = [
         ['applet', 'code', 'body'],
-        ['audio', 'src', ''],
+        ['audio', 'src', 'body'],
         ['embed', 'src', 'body'],
         ['frame', 'src', 'body'],
         ['iframe', 'src', 'body'],
