--- a/src/poc2/attacker.html
+++ b/src/poc2/attacker.html
@@ -52,7 +52,7 @@
         ['video', 'src', 'body'],
       ]
 
-      var delay = 200;
+      //var delay = 200;
 
       function run() {
         
