--- a/src/poc2/attacker.html
+++ b/src/poc2/attacker.html
@@ -29,7 +29,7 @@
         }
       }
 
-      var base = 'https://target.georgetian.com/';
+      var base = 'https://baidu.com/robots.txt';
 
       var sizes = [
         10,
