--- a/src/poc2/attacker.html
+++ b/src/poc2/attacker.html
@@ -4,8 +4,8 @@
     <title>Response size leak</title>
     <script>
 
-      function show(element, url, size, event, diff) {
-        document.getElementById('tbody').innerHTML += `<tr><td>${element}</td><td>${url}</td><td>${size}</td><td>${event}</td><td>${diff}</td><tr>`;
+      function show(tag, attribute, url, size, event, diff) {
+        document.getElementById('tbody').innerHTML += `<tr><td>${tag}</td><td>${attribute}</td><td>${url}</td><td>${size}</td><td>${event}</td><td>${diff}</td><tr>`;
       }
 
       var events = [
@@ -33,7 +33,7 @@
 
         for (const event of events) {
           element[event] = () => {
-            show(tag, url, size, event, performance.getEntries().length - start);
+            show(tag, attribute, url, size, event, performance.getEntries().length - start);
           }
         }
       }
@@ -102,7 +102,8 @@
     <table>
       <thead>
         <tr>
-          <th>Element</th>
+          <th>Tag</th>
+          <th>Attribute</th>
           <th>URL</th>
           <th>Size</th>
           <th>Event</th>
