--- a/src/poc2/attacker.html
+++ b/src/poc2/attacker.html
@@ -18,6 +18,7 @@
         let element = document.createElement(tag);
 
         if (tag == 'input') {
+          print('input');
           element.type = 'image';
         }
 
@@ -61,7 +62,7 @@
         ['video', 'src', 'body'],
       ]
 
-      var delay = 1000;
+      var delay = 500;
 
       function run() {
         
