--- a/src/poc2/attacker.html
+++ b/src/poc2/attacker.html
@@ -18,7 +18,7 @@
         let element = document.createElement(tag);
 
         if (tag == 'input') {
-          print('input');
+          console.log('input');
           element.type = 'image';
         }
 
