--- a/src/poc2/attacker.html
+++ b/src/poc2/attacker.html
@@ -28,7 +28,7 @@
         
 
         if (location != '') {
-          element.hidden = true;
+          //element.hidden = true;
           document[location].appendChild(element);
         }
 
