--- a/src/poc2/attacker.html
+++ b/src/poc2/attacker.html
@@ -54,7 +54,7 @@
         ['iframe', 'src', 'body'],
         ['img', 'src', 'body'],
         ['input', 'src', 'body'],
-        ['link', 'href', 'body'],
+        ['link', 'href', 'head'],
         ['object', 'data', 'body'],
         ['script', 'src', 'body'],
         ['track', 'src', 'body'],
