--- a/src/poc2/attacker.html
+++ b/src/poc2/attacker.html
@@ -55,7 +55,7 @@
         ['iframe', 'src', 'body'],
         ['img', 'src', 'body'],
         ['input', 'src', 'body'],
-        ['link', 'href', 'head'],
+        ['link', 'href', 'body'],
         ['object', 'data', 'body'],
         ['script', 'src', 'body'],
         ['track', 'src', 'body'],
@@ -63,7 +63,7 @@
         ['video', 'src', 'body'],
       ]
 
-      var delay = 500;
+      var delay = 200;
 
       function run() {
         
